--- a/uFramework.Entities/uFramework.Entities.csproj
+++ b/uFramework.Entities/uFramework.Entities.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseEntity.cs" />
+    <Compile Include="Entity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Ent_ValidationResource.Designer.cs">
       <AutoGen>True</AutoGen>
